úprava stylů a odebrání formuláře

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="service-list">
                 <div class="service-item">
                     <h3>Soustružení</h3>
-                    <img src="images/soustruzeni.jpg" alt="CNC soustružení">
+                    <img src="images/soustruh.jpg" alt="CNC soustružení">
                     <p>Vysoká přesnost a kvalita zpracování.</p>
                 </div>
                 <div class="service-item">
@@ -55,31 +55,27 @@
     <section id="about">
         <div class="container">
             <h2>O nás</h2>
-            <p>Naše firma s více než 20 lety zkušeností v oboru poskytuje kvalitní a přesné služby obrábění kovů.</p>
+            <p>Naše malá firma s více než 20 lety zkušeností v oboru obrábění kovů je vaším spolehlivým partnerem pro všechny potřeby strojírenské výroby. S využitím nejmodernějších technologií a naším odborným týmem nabízíme širokou škálu služeb, od přesného CNC obrábění až po profesionální sváření a frézování. Díky našemu individuálnímu přístupu ke každé zakázce garantujeme vysokou kvalitu, preciznost a včasné dodání. Neváhejte se na nás obrátit, rádi vám pomůžeme realizovat vaše projekty a poskytnout řešení šité na míru vašim potřebám.</p>
         </div>
     </section>
 
     <section id="contact">
         <div class="container">
             <h2>Kontaktujte nás</h2>
-            <form action="#">
-                <label for="name">Jméno:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Zpráva:</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-
-                <button type="submit">Odeslat</button>
-            </form>
+            <p>Pro více informací nás můžete kontaktovat na níže uvedených údajích:</p>
+            <div>
+                <ul>
+                    <li><strong>Telefon:</strong> +420 123 456 789</li>
+                    <li><strong>Email:</strong> <a href="mailto:info@vasefirma.cz">info@vasefirma.cz</a></li>
+                    <li><strong>Adresa:</strong> Vaše Firma, Ulice 123, 110 00 Praha</li>
+                </ul>
+            </div>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Vaše firma. Všechna práva vyhrazena.</p>
+            <p>&copy; 2024 KooperantCNC. Všechna práva vyhrazena.</p>
         </div>
     </footer>
 </body>
