--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="container">
             <h2>Kontaktujte nás</h2>
             <p>Pro více informací nás můžete kontaktovat na níže uvedených údajích:</p>
-            <div>
+            <div id="info">
                 <ul>
                     <li><strong>Telefon:</strong> +420 123 456 789</li>
                     <li><strong>Email:</strong> <a href="mailto:info@vasefirma.cz">info@vasefirma.cz</a></li>
